--- a/public/config.ini
+++ b/public/config.ini
@@ -1,5 +1,5 @@
 ﻿[database]
-DB_HOST=35.236.133.179
-DB_USER=admin
-DB_PASS=Pocketportal!1
-DB_NAME=pocketportal-db
+DB_HOST='35.236.133.179'
+DB_USER='admin'
+DB_PASS='Pocketportal!1'
+DB_NAME='pocketportal-db'
